--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.3.0",
     "react-loader-spinner": "^6.1.6",
+    "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
