--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
+    "cors": "^2.8.5",
     "firebase": "^10.14.1",
     "lottie-react": "^2.4.0",
     "react": "^18.3.1",
